1/24/12 fix "Saturated" indicator, observe the amount of precipitate, not the concentration
1/24/12 setOpaque(false) for "Show values" check box
1/24/12 change min color for KMnO4 to RGB=[225,28,174]
1/24/12 fix max range label on sliders
# 0.00.14 (60447) Jan 18, 2012
1/18/12 first dev version of "Molarity" sim, for team discussion
1/17/12 use PrecisionDecimal to limit values to 2 decimal places in sliders
1/17/12 use HALF_UP (nearest neighbor) rounding in DefaultDecimalFormat
1/17/12 cleanup the number formatter that displays zero as "0" (no decimal places)
1/17/12 show min/max/current value on sliders, switch between quantitative and qualitative
1/17/12 generalize the label that can be switched between quantitative and qualitative representations
1/16/12 add "non-interactive" message to beaker
1/16/12 add "non-interactive" messages for parts of the concentration display that the user is likely to try to interact with
1/16/12 add values to concentration display
1/16/12 add tick mark labels to beaker
1/16/12 add data collection feature
1/16/12 restore "Show values" control in the Molarity tab (property not wired up to other components yet)
1/16/12 add sim-sharing enums, to be used in any new development
1/16/12 delete NamedPoints, it adds complexity that's not really necessary
1/16/12 add solvent (water) to model
1/16/12 remove strings that are specific to DilutionsApplication from strings file, so they aren't visible to the MolarityApplication translators
1/16/12 use lowercase "m" in "moles"
1/16/12 add min/max color range for solutes (ala beers-law-lab)
1/12/12 delete strings related to Beer's Law tab, since that tab became its own sim project
1/12/12 add Molarity sims flavor
1/12/12 ***** decision made to publish the first tab (Molarity) as "Molarity" sim
1/12/12 names (no formulae) for solutes in combo box
1/12/12 capitalize solute names
12/6/11 #3175, add sim-sharing args to usages of SliderThumbDragHandler
11/3/11 delete empty modules