@@ -1,0 +1,19 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.dilutions;
+
+import java.awt.Font;
+
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+
+/**
+ * Constants used throughout this sim.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class DilutionsConstants {
+
+    public static final PhetFont SLIDER_LABEL_FONT = new PhetFont( Font.BOLD, 16 );
+    public static final PhetFont SLIDER_UNITS_FONT = new PhetFont( Font.PLAIN, 14 );
+    public static final PhetFont SLIDER_RANGE_FONT = new PhetFont( Font.PLAIN, 14 );
+    public static final PhetFont SLIDER_VALUE_FONT = new PhetFont( Font.PLAIN, 16 );
+}
